2002-04-05  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.6 "bok choi" is released.

2002-03-31  Ben Wing  <ben@xemacs.org>

	* config.inc.samp (DEBUG_XEMACS):
	* xemacs.mak (DEBUG_XEMACS):
	* xemacs.mak (ERROR_CHECK_ALL): New.
	Separate out and add new variable for controlling error-checking.

2002-03-29  Jonathan Harris  <jonathan@xemacs.org>

	* make-nt-depend:
	* xemacs.mak (DEPEND):
	* xemacs.mak (PERL_NEEDS_MORE_QUOTING):
	* config.inc.samp (PERL_NEEDS_MORE_QUOTING):
	Moved perl dependency script out into new make-nt-depend file to
	hopefully finally solve never-ending perl quoting problems.

	* xemacs.mak (TEMACS):
	* xemacs.mak (make-docargs):
	* .cvsignore:
	Generate intermediate files in obj subdirectory, not in nt dir.

2002-03-29  Jonathan Harris  <jonathan@xemacs.org>

	* xemacs.mak: Define STACK_TRACE_EYE_CATCHER.

2002-03-18  Ben Wing  <ben@xemacs.org>

	* config.inc.samp (DEPEND):
	* config.inc.samp (PERL_NEEDS_MORE_QUOTING):
	* xemacs.mak (DEPEND):
	* xemacs.mak (PERL_NEEDS_MORE_QUOTING):
	Deal with never-ending perl quoting problems.

2002-03-16  Ben Wing  <ben@xemacs.org>

	* .cvsignore:
	Those pesky *.tmp files.

2002-03-15  Ben Wing  <ben@xemacs.org>

	* xemacs.mak:
	* xemacs.mak (BATCH):
	* xemacs.mak (XEMACS_BATCH_PACKAGES):
	* xemacs.mak (batch_test_emacs):
	* xemacs.mak (MAKEINFO):
	* xemacs.mak (makeinfo-test):
	Use -no-packages to avoid problems with package files shadowing
	core files (e.g. unicode.el in mule-ucs).

2002-03-12  Ben Wing  <ben@xemacs.org>

	* The Great Mule Merge: placeholder.

2002-03-05  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.5 "beets" is released.

2002-01-08  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.4 "bamboo" is released.

2001-09-28  Adrian Aichner  <adrian@xemacs.org>

	* xemacs.mak (COPY): Use xcopy /r for NT 4.0 compatibility.
	* xemacs.mak (COPYDIR): Ditto

2001-09-07  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.3 "asparagus" is released.
