@@ -13,9 +13,13 @@
 
 
 #include <stdio.h>
+#include <stdlib.h>
 #include <errno.h>
 #include <string.h>
 #include <io.h>
+#ifdef WIN32_NATIVE
+# include <direct.h>	/* For mkdir */
+#endif
 
 #include <zlib.h>
 
